--- a/psu_flutter/AppShell.xaml
+++ b/psu_flutter/AppShell.xaml
@@ -11,6 +11,6 @@
     <ShellContent
           Title=""
     ContentTemplate="{DataTemplate local:MainPage}"
-    Shell.NavBarIsVisible="False" />
+    Shell.NavBarIsVisible="False" Shell.TabBarIsVisible="False"/>
 
 </Shell>
