--- a/psu_flutter/MainPage.xaml
+++ b/psu_flutter/MainPage.xaml
@@ -6,7 +6,7 @@
     <Grid RowDefinitions="*,15*">
         <Button Grid.Row="0" BackgroundColor="Black" HeightRequest="40"  WidthRequest="90" HorizontalOptions="End" VerticalOptions="Start" Text="options" Clicked="Button_Clicked_2"></Button>
         <Label Grid.Row="1" FontSize="24" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding IsOrdersEmpty}">Немає Замовленнь</Label>
-
+        <Label Grid.Row="1" FontSize="24" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding IsNotConnected}">Немає з'єднання</Label>
         <Grid ColumnDefinitions="*,2*" RowDefinitions="*,*,*,*" IsVisible="{Binding MenuVisibility}" BackgroundColor="WhiteSmoke" Grid.Row="1" ZIndex="2">
             <!-- Поле для вводу IP -->
             <Label Grid.Column="0" Grid.Row="1" HorizontalOptions="End" FontSize="26" VerticalOptions="Center">Ip:</Label>
@@ -36,13 +36,13 @@
             </Button>
         </Grid>
 
-        <CollectionView  Grid.Row="1"  ItemsSource="{Binding Orders}" ItemsLayout="HorizontalList">
+        <CollectionView   Grid.Row="1"  ItemsSource="{Binding Orders}" ItemsLayout="HorizontalList">
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <Border  Stroke="Black"
          StrokeThickness="1"
          StrokeShape="RoundRectangle 10,10,10,10"  Margin="10" BackgroundColor="LightGray">
-                    <Grid   RowDefinitions="2*,3*,16*" ColumnDefinitions="600" >
+                    <Grid   RowDefinitions="3*,3*,16*" ColumnDefinitions="500" >
                         <Grid  Grid.Row="0" Grid.Column="1" ColumnDefinitions="*,*,*">
                             <Label Grid.Column="1"   HorizontalOptions="Center" VerticalOptions="Center" FontSize="52" FontFamily="Josefin Sans" FontAttributes="Bold"    Text="{Binding Id}" />
                             <Button Text="×"
@@ -93,16 +93,17 @@
                                 </Button.Triggers>
                             </Button>
                         </Grid>
-                        <CollectionView   Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Wares}">
+                            <CollectionView   Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Wares}">
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
-                                    <Border Margin="0,20,10,0"  StrokeThickness="2" Stroke="#b5aeae">
-                                        <Grid Background="#c2c2c2" Padding="10" ColumnDefinitions="*,*">
-                                            <Label FontSize="24" TextColor="Black" FontFamily="Josefin Sans" Grid.Column="0" VerticalOptions="Center" HorizontalOptions="Start" Text="{Binding NameWares}" />
-                                            <CollectionView Grid.Column="1" ItemsSource="{Binding ReceiptLinks}">
+                                    <Border Margin="0,10,0,0"  StrokeThickness="2" Stroke="#b5aeae">
+                                        <Grid Background="#c2c2c2"  RowDefinitions="1*,7*">
+
+                                                <Label MinimumHeightRequest="100" FontSize="28" FontAttributes="Bold" TextColor="Black" FontFamily="Josefin Sans" Grid.Row="0"  HorizontalOptions="Start" Text="{Binding NameQuantity}" />
+                                                <CollectionView MinimumHeightRequest="400"  Grid.Row="1" ItemsSource="{Binding ReceiptLinks}">
                                                 <CollectionView.ItemTemplate>
                                                     <DataTemplate>
-                                                        <Label FontFamily="Josefin Sans" FontSize="22"   Text="{Binding Name}"></Label>
+                                                            <Label FontFamily="Josefin Sans" FontSize="22"   Text="{Binding NameQuantity}"></Label>
                                                     </DataTemplate>
                                                 </CollectionView.ItemTemplate>
                                             </CollectionView>
