--- a/psu_flutter/MainPage.xaml
+++ b/psu_flutter/MainPage.xaml
@@ -3,15 +3,26 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="psu_flutter.MainPage"
               Title="">
-    <Grid RowDefinitions="*,15*">
-        <Button Grid.Row="0" BackgroundColor="Black" HeightRequest="40"  WidthRequest="90" HorizontalOptions="End" VerticalOptions="Start" Text="options" Clicked="Button_Clicked_2"></Button>
-        <Label Grid.Row="1" FontSize="24" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding IsOrdersEmpty}">Немає Замовленнь</Label>
-        <Label Grid.Row="1" FontSize="24" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding IsNotConnected}">Немає з'єднання</Label>
-        <Grid ColumnDefinitions="*,2*" RowDefinitions="*,*,*,*" IsVisible="{Binding MenuVisibility}" BackgroundColor="WhiteSmoke" Grid.Row="1" ZIndex="2">
-            <!-- Поле для вводу IP -->
-            <Label Grid.Column="0" Grid.Row="1" HorizontalOptions="End" FontSize="26" VerticalOptions="Center">Ip:</Label>
-            <Entry WidthRequest="400" Text="{Binding IP}" FontSize="22" Grid.Row="1" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Center" Completed="OnEntryCompleted"></Entry>
+    <Grid RowDefinitions="*,40*">
+        <Button 
+    Grid.Row="0" 
+    BackgroundColor="Transparent" 
+    HeightRequest="40"   
+    WidthRequest="90" 
+    HorizontalOptions="End" 
+    VerticalOptions="Center" 
+    Text="options">
+            <Button.GestureRecognizers>
+                <TapGestureRecognizer Tapped="Button_Clicked_2" NumberOfTapsRequired="2" />
+            </Button.GestureRecognizers>
+        </Button>
 
+        <Label ZIndex="200" Grid.Row="1" FontSize="24" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding IsOrdersEmpty}">Немає Замовленнь</Label>
+        <Label ZIndex="200" Grid.Row="1" FontSize="24" HorizontalOptions="Center" VerticalOptions="Center" IsVisible="{Binding IsNotConnected}">Немає з'єднання</Label>
+        <Grid ColumnDefinitions="*,2*,*" RowDefinitions="*,*,*,*" IsVisible="{Binding MenuVisibility}" BackgroundColor="WhiteSmoke" Grid.Row="1" ZIndex="300">
+            <!-- Поле для вводу IP -->
+            <Label  Grid.Column="0" Grid.Row="1" HorizontalOptions="End" FontSize="26" VerticalOptions="Center">Ip:</Label>
+            <Entry WidthRequest="400" Text="{Binding IP}" FontSize="22" Grid.Row="1" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Center" Completed="OnEntryCompleted"></Entry>
             <!-- Поле для вводу порту -->
             <Label Grid.Column="0" Grid.Row="2" HorizontalOptions="End" FontSize="26" VerticalOptions="Center">Port:</Label>
             <Entry WidthRequest="400" FontSize="22" Text="{Binding Port}" Grid.Row="2" Grid.Column="1" HorizontalOptions="Start" VerticalOptions="Center" Completed="OnEntryCompleted1" Keyboard="Numeric"></Entry>
@@ -36,26 +47,29 @@
             </Button>
         </Grid>
 
-        <CollectionView   Grid.Row="1"  ItemsSource="{Binding Orders}" ItemsLayout="HorizontalList">
+        <CollectionView  Background="White" Grid.Row="1"  ItemsSource="{Binding Orders}" ItemsLayout="HorizontalList">
         <CollectionView.ItemTemplate>
             <DataTemplate>
                 <Border  Stroke="Black"
          StrokeThickness="1"
          StrokeShape="RoundRectangle 10,10,10,10"  Margin="10" BackgroundColor="LightGray">
                     <Grid   RowDefinitions="3*,3*,16*" ColumnDefinitions="500" >
-                        <Grid  Grid.Row="0" Grid.Column="1" ColumnDefinitions="*,*,*">
-                            <Label Grid.Column="1"   HorizontalOptions="Center" VerticalOptions="Center" FontSize="52" FontFamily="Josefin Sans" FontAttributes="Bold"    Text="{Binding Id}" />
+                            <Grid BackgroundColor="{Binding MainColor}" Grid.Row="0"  Grid.Column="1" ColumnDefinitions="*,*,*">
+                          
                             <Button Text="×"
                                     TextColor="White"
+                                    Padding="1"
                                     Grid.Column="2"
-                                    BackgroundColor="DimGray"
-                                    WidthRequest="150"
-                                    FontSize="28" Clicked="Button_Clicked_1" CommandParameter="{Binding}"
+                                    BackgroundColor="Transparent"
+                                   BorderColor="AliceBlue"
+                                    BorderWidth="0.7"
+                                    WidthRequest="100"
+                                    FontSize="38" Clicked="Button_Clicked_1" CommandParameter="{Binding}"
                                     IsVisible="{Binding IsButtonVisible}"
-                                    HeightRequest="60"
+                                    HeightRequest="50"
                                     CornerRadius="10"
                                     HorizontalOptions="End"
-                                    VerticalOptions="End">
+                                    VerticalOptions="Start">
                                 <Button.Shadow>
                                     <Shadow Brush="Gray" Opacity="0.8" Radius="10" />
                                 </Button.Shadow>
@@ -74,10 +88,10 @@
                             </Button>
 
                         </Grid>
-                        <Grid Grid.Row="1" >
-                                <Button  Clicked="Button_Clicked"  CommandParameter="{Binding}" Text="{Binding StatusText}"   Padding="5"   Background="#3c3d40"  CornerRadius="50" VerticalOptions="Center" FontSize="42" FontFamily="Josefin Sans"  Margin="5,10,5,0">
+                            <Grid Grid.Row="1" BackgroundColor="{Binding MainColor}">
+                                <Button  Clicked="Button_Clicked"  CommandParameter="{Binding}" Text="{Binding StatusText}" HeightRequest="70"    TextColor="{Binding TextColor}"   Background="White"  CornerRadius="20" WidthRequest="460" Padding="5" Margin="0,0,0,25" VerticalOptions="Center" FontSize="35" FontFamily="serif" >
                                 <Button.Shadow>
-                                    <Shadow Brush="Gray" Opacity="0.8" Radius="10" />
+                                    <Shadow Brush="Black" Opacity="0.8" Radius="10" />
                                 </Button.Shadow>
                                 <Button.Triggers>
                                     <!-- Тригер для натискання -->
@@ -93,17 +107,18 @@
                                 </Button.Triggers>
                             </Button>
                         </Grid>
-                            <CollectionView   Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Wares}">
+                            <Label  Grid.Row="2" Grid.Column="1" ZIndex="10" HorizontalOptions="Center"   Text="{Binding Id}" FontSize="200" TextColor="{Binding IdColor}" Opacity="0.4" ></Label>
+                            <CollectionView ZIndex="1" BackgroundColor="{Binding SecondaryColor}"  Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Wares}">
                             <CollectionView.ItemTemplate>
                                 <DataTemplate>
-                                    <Border Margin="0,10,0,0"  StrokeThickness="2" Stroke="#b5aeae">
-                                        <Grid Background="#c2c2c2"  RowDefinitions="1*,7*">
+                                        <Border Margin="0,10,0,0"  StrokeThickness="2">
+                                        <Grid Background="White"  RowDefinitions="1*,2*">
 
-                                                <Label MinimumHeightRequest="100" FontSize="28" FontAttributes="Bold" TextColor="Black" FontFamily="Josefin Sans" Grid.Row="0"  HorizontalOptions="Start" Text="{Binding NameQuantity}" />
-                                                <CollectionView MinimumHeightRequest="400"  Grid.Row="1" ItemsSource="{Binding ReceiptLinks}">
+                                                <Label MinimumHeightRequest="100" FontSize="32"  FontAttributes="Bold" TextColor="Black" FontFamily="Josefin Sans" Grid.Row="0" Margin="0,25,0,0" HorizontalOptions="Center" Text="{Binding NameQuantity}" />
+                                                <CollectionView MinimumHeightRequest="150"   Grid.Row="1" ItemsSource="{Binding ReceiptLinks}">
                                                 <CollectionView.ItemTemplate>
                                                     <DataTemplate>
-                                                            <Label FontFamily="Josefin Sans" FontSize="22"   Text="{Binding NameQuantity}"></Label>
+                                                            <Label  FontFamily="Josefin Sans" FontSize="21" Margin="15,0,0,0"   Text="{Binding NameQuantity}"></Label>
                                                     </DataTemplate>
                                                 </CollectionView.ItemTemplate>
                                             </CollectionView>
